--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
      <script  src="assets/js/plugins/jquery.vmap.world.js"></script>
      <script  src="assets/js/plugins/jquery.vmap.sampledata.js"></script>
      <script  src="assets/js/plugins/bootstrap-notify.min.js"></script>
+     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+     <!--<script  src="assets/js/plugins/sweetalert.min.js"></script>-->
 
 </body>
 </html>
